2008-04-16  Matthias Clasen  <mclasen@redhat.com>

	Bug 526793 – unmount hangs with some backends

	* daemon/gvfsbackendgphoto2.c: Set exit-on-disconnect to FALSE
	on the private dbus connection to prevent unexpected exit before
	the job is done.

2008-04-16  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c:
	Set mount prefix on the mount_spec (again). Fixes #528218

2008-04-16  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackendhttp.c:
	Add logging for soup so we can get easy network traces even
	if we are doing https.

2008-04-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 526454 – too early use of dbus session bus

	* client/gdaemonvfs.c (g_io_module_load): Refuse to load if
	there is no session bus. 
	
2008-04-14  Matthias Clasen  <mclasen@redhat.com>

	* client/gvfsfusedaemon.c: You cannot store pointers in integers.
	Fixes a crash on 64bit systems.

2008-04-14  Matthias Clasen  <mclasen@redhat.com>

	* common/gmounttracker.c (g_mount_tracker_finalize): Only free
	lock if it is non-NULL. Pointed out by Denis Leroy.

2008-04-07  David Zeuthen  <davidz@redhat.com>

	* hal/ghalvolume.c (g_hal_volume_new): Unbreak the gphoto2 backend
	by allowing automounting.

	* programs/gvfs-mount.c (main, unmount_all_with_scheme): Add a
	new option --unmount-scheme

	* AUTHORS: Add cdda and gphoto2 backends

2008-04-05  Christian Kellner  <gicmo@gnome.org>

	* client/httpuri.c: 
	Only set a port in the mount spec if it is not the default
	port for the scheme.

	* daemon/gvfsbackenddav.c:
	Cleanup mount function a bit.

2008-04-04  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c:
	Implement set_display_name. (#525980) 
	With this patch we also do our own redirection handling which
	alyways allows redirects from /a/b -> /a/b/ (trainling slashes)
	even for non safe methods. Also some code was cleaned up.

2008-04-02  Christian Kellner  <gicmo@gnome.org>

	* hal/hal-utils.h:
	* hal/hal-utils.c: