@@ -1,3 +1,14 @@
+2008-04-16  David Zeuthen  <davidz@redhat.com>
+
+	* hal/ghalvolumemonitor.c: (should_mount_be_ignored),
+	(should_volume_be_ignored), (update_mounts):
+
+	Avoid having GVolume and GMount objects for mounts for which the
+	mount point will make g_unix_mount_guess_should_display() return
+	FALSE. This fixes a problem where e.g. live cd installers mounts
+	some file system somewhere (e.g. a /boot partition at
+	/mnt/installer_boot).
+
 2008-04-16  Matthias Clasen  <mclasen@redhat.com>
 
 	Bug 526793 – unmount hangs with some backends
